[metadata]
name = ti_id_utils
version = 0.0.2
description = Common utilities for building consistent id for use in our system
author = Matt Peters
license = MIT
classifiers =
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.10
    Intended Audience :: Developers
    Topic :: System :: Logging
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = ti_id_utils
package_dir =
    ti_id_utils = src/ti_id_utils
python_requires = >=3.10
install_requires =

[options.package_data]
ti_id_utils = ["py.typed"]

[options.extras_require]
dev =
    python-dotenv>=0.21.0
    pytest>=7.0.0
    pytest-cov>=4.0.0
